--- a/common.css
+++ b/common.css
@@ -10,57 +10,66 @@ div#TopPanel {
     height: 40px;
 
     background-color: rgb(87, 28, 60);
+    box-shadow: 10px, 0px, rgba(0, 0, 0, 1);
 
     border-width: 0px;
     border-bottom: 3px;
+    border-color: black;
     border-style: solid;
-    border-color: rgb(0, 0, 0);
 
-    box-shadow: 10px, 0px, rgb(0, 0, 0);
+    transition: 125ms;
 }
 
-div#TopPanel[IsHovered="true"] {
-    animation-name: ResizeUp;
-    animation-duration: 125ms;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-fill-mode: forwards;
+p#TopPanelLoginCover {
+    margin: 0;
+    top: 3px;
+    position: absolute;
+    right: 2.5%;
+
+    font-family: monospace;
+    font-size: xx-large;
+
+    color: white;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.466);
+
+    user-select: none;
+
+    transition: 125ms;
 }
 
-div#TopPanel[IsHovered="false"] {
-    animation-name: ResizeDown;
-    animation-duration: 125ms;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-out;
-    animation-fill-mode: forwards;
+a.AccountHyperlink {
+    margin: 0;
+    position: absolute;
+    right: 1.75%;
+
+    width: 150px;
+    height: 50px;
+    top: 15px;
+
+    color: transparent;
+    transition: 125ms;
+    background-color: transparent;
+
+    font-size: xx-large;
+    font-family: monospace;
+    text-align: center;
+
+    user-select: none;
+
+    text-decoration-line: none;
 }
 
-@keyframes ResizeUp {
-    from {
-        height: 40px;
-        background-color: rgb(87, 28, 60);
-    }
-    to {
-        height: 120px;
-        background-color: rgb(141, 44, 97);
-    }
-}
+div#TopPanel[IsHovered="true"] a.AccountHyperlink:hover {
+    text-decoration-line: underline;
+    cursor: pointer;
 
-@keyframes ResizeDown {
-    from {
-        height: 120px;
-        background-color: rgb(141, 44, 97);
-    }
-    to {
-        height: 40px;
-        background-color: rgb(87, 28, 60);
-    }
+    color: rgba(247, 188, 255, 1);
 }
 
 /* Main panel */
 div#MainPanel {
     z-index: 0;
-
+    
     width: 100%;
     height: 1000px;
     background-image: linear-gradient(90deg, rgb(57, 57, 87),rgb(45, 45, 68), rgb(45, 45, 68), rgb(57, 57, 87));
