--- a/common.css
+++ b/common.css
@@ -1,5 +1,7 @@
 body {
     margin: 0;
+    background-color: rgb(57, 57, 87);
+    background-image: linear-gradient(90deg,  rgb(57, 57, 87),rgb(45, 45, 68), rgb(45, 45, 68), rgb(57, 57, 87));
 }
 
 /* Top panel */
@@ -29,8 +31,9 @@ p#TopPanelLoginCover {
     font-family: monospace;
     font-size: xx-large;
 
-    color: white;
+    color: rgb(206, 180, 204);
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.466);
+    text-align: right;
 
     user-select: none;
 
@@ -40,9 +43,9 @@ p#TopPanelLoginCover {
 a.AccountHyperlink {
     margin: 0;
     position: absolute;
-    right: 1.75%;
+    right: 2.5%;
 
-    width: 150px;
+    width: 175px;
     height: 50px;
     top: 15px;
 
@@ -52,7 +55,7 @@ a.AccountHyperlink {
 
     font-size: xx-large;
     font-family: monospace;
-    text-align: center;
+    text-align: right;
 
     user-select: none;
 
@@ -66,21 +69,22 @@ div#TopPanel[IsHovered="true"] a.AccountHyperlink:hover {
     color: rgba(247, 188, 255, 1);
 }
 
-/* Main panel */
-div#MainPanel {
-    z-index: 0;
-    
-    width: 100%;
-    height: 1000px;
-    background-image: linear-gradient(90deg, rgb(57, 57, 87),rgb(45, 45, 68), rgb(45, 45, 68), rgb(57, 57, 87));
-}
+div#BackToIndexButton {
+    background-color: white;
 
+    position: relative;
+    left: 5px;
+    top: 5px;
+
+    width: 30px;
+    height: 30px;
+}
 
 /* Info panel */
 div#BottomInfoPanel {
+    position: absolute;
     z-index: 0;
 
-    bottom: 0px;
     width: 100%;
     height: 200px;
 
